src/test/ui/const-eval-overflow-4.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-eval-overflow-4.rs:23:13
   |
23 |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ miri failed: Overflow(Add) at $DIR/const-eval-overflow-4.rs:23:13: 23:34

error: aborting due to previous error

